@@ -9,6 +9,7 @@ SVN
 - Fixed wxString conversions, fixing problems with exporting song name, copyright and track names
 - Key is now correctly loaded from files in keyboard editor too
 - Added check next to currently selected key in key pop-up menu
+- Somewhat better handling of out-of-range notes in keyboard editor
 
 1.1.1
 - Added feature to see other tracks in background of current track (keyboard view only for now)
